# TwilightEscapers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.py  build.sh  buildLinux.sh  buildWin.bat  buildWin.ps1  config.json  run.bat  run.sh  runLinux.sh  start.bat
assets/shaders/: grayscale.frag  shader.frag
assets/textures/old/: noisedimage.ppm
assets/tiles/: blocks.json
drawing/19.05 - Gentle Forest 2.0a (free palettes)/: readme.txt
drawing/created/projects/gimp/: guard.xcf  guard_front.xcf
drawing/created/projects/piskel/: 32BitStoneTextures.piskel
drawing/dopan's 48x48 MV edit/: dopan readme.txt
drawing/own/: tile-selector.aseprite
include/: bind.hpp  gui.hpp  utils.hpp
source/: Controller.hpp  Entity.hpp  Map.hpp  NoiseOld.hpp  Render.cpp  Render.hpp  Renderer.cpp  TextureManager.hpp  Utils.hpp  World.cpp  World.hpp  assetinfo.hpp  geomtest.cpp  gui.hpp  light.old.cpp  lightexample.cpp  main.cpp  pixellight.cpp  utils.hpp
source/logic/base/: Base.hpp
source/logic/entity/: Character.hpp  Entity.hpp
source/logic/world/: Block.hpp  Light.hpp  Map.hpp  World.hpp
source/old/: Block.hpp  Character.hpp  Light.hpp  Utils.hpp
src/: Renderer.hpp  World.hpp  hashed.cpp  main.cpp  noised.cpp  particles.cpp
src/old/: Entity.hpp  main.cpp  other.cpp  particles.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
